--- a/About caNanoLab.2.3.html
+++ b/About caNanoLab.2.3.html
@@ -94,7 +94,7 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text"><a name="1089391">caNanoLab s</a>ource code is available at the National Cancer Institute Center for <a href="http://ncicb.nci.nih.gov/download/" target="_window">Bioinformatics (NCICB) download center: </a><span class="URL" style="font-size: 10.0pt;">http://ncicb.nci.nih.gov/download/</span>.</div>
+      <div class="Body_Text"><a name="1089391">caNanoLab s</a>ource code is available at the National Cancer Institute Center for Bioinformatics (NCICB) download center: <span class="HTTP" style="font-size: 11.0pt;">http://ncicb.nci.nih.gov/download/</span>.</div>
       <div class="Body_Text"><a name="1112076">For more information about these features and their related tasks, see </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'About%20caNanoLab.2.10.html#1153208', '');">caNanoLab Functionality Overview</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
