--- a/Nanoparticles.4.6.html
+++ b/Nanoparticles.4.6.html
@@ -260,14 +260,12 @@
           </td>
         </tr>
       </table>
-      <div class="Note_outer" style="margin-left: 50.25pt;">
+      <div class="Note_outer" style="margin-left: 36pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1153256">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 12px;">
-                  <img src="Lightbulb.gif" alt="*" id="bullet1153256" border="0" width="30" height="30" />
-                </span>
+              <div class="Note_inner" style="width: 32.400000000000006pt; white-space: nowrap;">
+                <span class="Bold">Note:	</span>
               </div>
             </td>
             <td width="100%">
