--- a/web/webHelp/About caNanoLab.2.2.html
+++ b/web/webHelp/About caNanoLab.2.2.html
@@ -157,7 +157,7 @@
               </div>
             </td>
             <td width="100%">
-              <div class="Note_Main_Body_inner"><a name="1161351">caNanoLab uses many terms unique to the nanotechnology domain. These words have </a>popup definitions in online help topics. Additionally, the online help glossary is comprehensive, including definitions for these terms. To open the glossary, click the </a><span style="font-weight: bold;">Glossary</span> link on any caNanoLab page, click any popup definition in an online help topic, or click the </a><span style="font-weight: bold;">Glossary</span> heading in the online help Table of Contents.</div>
+              <div class="Note_Main_Body_inner"><a name="1161351">caNanoLab uses many terms unique to the nanotechnology domain. These words have </a>popup definitions in online help topics. Additionally, the online help glossary is comprehensive, including definitions for these terms. To open the glossary, click the <span style="font-weight: bold;">Glossary</span> link on any caNanoLab page, click any popup definition in an online help topic, or click the caNanoLab <span style="font-weight: bold;">Glossary</span> heading in the online help Table of Contents.</div>
             </td>
           </tr>
         </table>
