--- a/web/webHelp/Navigation Tree--In_Vitro_Char.7.8.html
+++ b/web/webHelp/Navigation Tree--In_Vitro_Char.7.8.html
@@ -34,14 +34,12 @@
       <div class="Heading3"><a name="1554846">Adding a Cell Viability In Vitro Characterization</a></div>
       <div class="Body_Text"><a name="1546785">In caNanoLab </a><span class="Popup"><a href="javascript:WWHClickedPopup('caNanoLab', 'caNanoLab_Glossary.10.1.html#1073076', 'popups/caNanoLab_Glossary-1073076.html');" onMouseOver="javascript:WWHShowPopup('caNanoLab', 'popups/caNanoLab_Glossary-1073076.html', (document.all||document.getElementById||document.layers)?event:null);" onMouseOut="WWHHidePopup();">Nanoparticle Characterization</a></span> is defined with Physical and In Vitro Characterizations. </div>
       <div class="Body_Text"><a name="1546788"> </a><span class="Popup"><a href="javascript:WWHClickedPopup('caNanoLab', 'caNanoLab_Glossary.10.1.html#1072826', 'popups/caNanoLab_Glossary-1072826.html');" onMouseOver="javascript:WWHShowPopup('caNanoLab', 'popups/caNanoLab_Glossary-1072826.html', (document.all||document.getElementById||document.layers)?event:null);" onMouseOut="WWHHidePopup();">Cell Viability </a></span>is an <span class="Popup"><a href="javascript:WWHClickedPopup('caNanoLab', 'caNanoLab_Glossary.10.1.html#1072994', 'popups/caNanoLab_Glossary-1072994.html');" onMouseOver="javascript:WWHShowPopup('caNanoLab', 'popups/caNanoLab_Glossary-1072994.html', (document.all||document.getElementById||document.layers)?event:null);" onMouseOut="WWHHidePopup();">In Vitro Characterization</a></span>. </div>
-      <div class="Note_outer" style="margin-left: 50.25pt;">
+      <div class="Note_outer" style="margin-left: 36pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1546793">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 23px;">
-                  <img src="Lightbulb.gif" alt="*" id="bullet1546793" border="0" width="30" height="30" />
-                </span>
+              <div class="Note_inner" style="width: 32.400000000000006pt; white-space: nowrap;">
+                <span class="Bold">Note:	</span>
               </div>
             </td>
             <td width="100%">
@@ -92,7 +90,7 @@
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Note_Indent_inner" style="width: 25px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 23px;">
+                <span style="left: -20px; position: relative; top: 12px;">
                   <img src="Lightbulb.gif" alt="*" id="bullet1550905" border="0" width="30" height="30" />
                 </span>
               </div>
@@ -120,7 +118,7 @@
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Note_Main_Body_inner" style="width: 15px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 23px;">
+                <span style="left: -20px; position: relative; top: 12px;">
                   <img src="Lightbulb.gif" alt="*" id="bullet1546797" border="0" width="30" height="30" />
                 </span>
               </div>
