--- a/web/webHelp/Navigation Tree--Managing_Char.8.7.html
+++ b/web/webHelp/Navigation Tree--Managing_Char.8.7.html
@@ -38,7 +38,7 @@
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Note_Main_Body_inner" style="width: 15px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 23px;">
+                <span style="left: -20px; position: relative; top: 12px;">
                   <img src="Lightbulb.gif" alt="*" id="bullet1546781" border="0" width="30" height="30" />
                 </span>
               </div>
@@ -87,14 +87,12 @@
           </tr>
         </table>
       </div>
-      <div class="Note_outer" style="margin-left: 50.25pt;">
+      <div class="Note_outer" style="margin-left: 36pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1546787">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 23px;">
-                  <img src="Lightbulb.gif" alt="*" id="bullet1546787" border="0" width="30" height="30" />
-                </span>
+              <div class="Note_inner" style="width: 32.400000000000006pt; white-space: nowrap;">
+                <span class="Bold">Note:	</span>
               </div>
             </td>
             <td width="100%">
