--- a/web/webHelp/Protocols.3.5.html
+++ b/web/webHelp/Protocols.3.5.html
@@ -74,14 +74,12 @@
         </table>
       </div>
       <div class="Body_Text_Indent_2"><a name="1147820">When defining search criteria, there are no "required" fields. You can add only </a>those parameters that you consider essential to the search.  </div>
-      <div class="Note_outer" style="margin-left: 50.25pt;">
+      <div class="Note_outer" style="margin-left: 36pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1147821">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 12px;">
-                  <img src="Lightbulb.gif" alt="*" id="bullet1147821" border="0" width="30" height="30" />
-                </span>
+              <div class="Note_inner" style="width: 32.400000000000006pt; white-space: nowrap;">
+                <span class="Bold">Note:	</span>
               </div>
             </td>
             <td width="100%">
@@ -224,14 +222,12 @@
         </tr>
       </table>
       <div class="Body_Text_Indent_2"><a name="1147846">To clear the values and start again, click </a><span style="font-weight: bold;">Reset</span> to clear the search criteria.</div>
-      <div class="Note_outer" style="margin-left: 50.25pt;">
+      <div class="Note_outer" style="margin-left: 36pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1149143">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <span style="left: -20px; position: relative; top: 12px;">
-                  <img src="Lightbulb.gif" alt="*" id="bullet1149143" border="0" width="30" height="30" />
-                </span>
+              <div class="Note_inner" style="width: 32.400000000000006pt; white-space: nowrap;">
+                <span class="Bold">Note:	</span>
               </div>
             </td>
             <td width="100%">
