--- a/web/webHelp/Welcome.1.1.html
+++ b/web/webHelp/Welcome.1.1.html
@@ -105,7 +105,7 @@
               <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
             </td>
             <td width="100%">
-              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Navigation%20Tree%20Composition.5.1.html#1163598', '');" name="1082954">Navigation Tree—Sample Composition</a></span></div>
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="baggage/Navigation%20Tree%20Composition.fm" target="_window" name="1082954">Navigation Tree—Sample Composition</a></span></div>
             </td>
           </tr>
         </table>
@@ -118,7 +118,7 @@
               <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
             </td>
             <td width="100%">
-              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Navigation%20Tree%20Phys_Char.6.1.html#1163598', '');" name="1082958">Navigation Tree—Physical Characterizations</a></span></div>
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="baggage/Navigation%20Tree%20Phys_Char.fm" target="_window" name="1082958">Navigation Tree—Physical Characterizations</a></span></div>
             </td>
           </tr>
         </table>
@@ -131,7 +131,7 @@
               <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
             </td>
             <td width="100%">
-              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Navigation%20Tree%20In_Vitro_Char.7.1.html#1163598', '');" name="1083001">Navigation Tree—In Vitro Characterizations</a></span></div>
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="baggage/Navigation%20Tree%20In_Vitro_Char.fm" target="_window" name="1083001">Navigation Tree—In Vitro Characterizations</a></span></div>
             </td>
           </tr>
         </table>
@@ -144,7 +144,7 @@
               <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
             </td>
             <td width="100%">
-              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Navigation%20Tree%20Managing_Char.8.1.html#1163598', '');" name="1082962">Navigation Tree—Managing Characterizations</a></span></div>
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="baggage/Navigation%20Tree%20Managing_Char.fm" target="_window" name="1082962">Navigation Tree—Managing Characterizations</a></span></div>
             </td>
           </tr>
         </table>
