--- a/web/webHelp/caNanoLab_Glossary.10.1.html
+++ b/web/webHelp/caNanoLab_Glossary.10.1.html
@@ -351,7 +351,7 @@
             <div class="Table_Text"><a name="1072802">bulk phase</a></div>
           </td>
           <td id="tc1072804" style="background-color: WhiteSmoke; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Popup_Text"><a name="1072804">The substance in an emulsion that usually makes up the </a>largest portion of the emulsion and contains another substance suspended within.</div>
+            <div class="Popup_Text"><a name="1072804">The substance in an emulsion that usually makes up the largest </a>portion of the emulsion and contains another substance suspended within.</div>
           </td>
         </tr>
         <tr>
@@ -847,7 +847,7 @@
             <div class="Table_Text"><a name="1072991">in vitro characterization</a></div>
           </td>
           <td id="tc1072994" style="background-color: WhiteSmoke; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Popup_Text"><a name="1072994">The determination of the effect of nanoparticles on living cells </a>in an artificial laboratory environment outside of the living organism.</div>
+            <div class="Popup_Text"><a name="1072994">The determination of the effect of nanoparticles on living cells in </a>an artificial laboratory environment outside of the living organism.</div>
           </td>
         </tr>
         <tr>
